# x-shell

./: .dockerignore  AUTH.md  AUTHENTICATION_COMPLETE_GUIDE.md  CHANGELOG.md  README.md  auth-example.js  custom-auth-examples.js  package-lock.json  package.json  test-auth-providers.js  test-auth.js
.cloud-code/: reporting.yaml  tasking.yaml
.cloud-code/plans/: 6f80b8ca-9a56-4db8-b32b-2a70fcb4e8fc.yaml  757c4853-09b9-4282-9044-1669aa821bd6.yaml  bc55a65a-0809-4593-a9c7-df53ea26b9e6.yaml
.github/workflows/: release.yml
bindings/python/: README.md  pyproject.toml
bindings/python/src/xshell/: __init__.py  client.py  models.py
bindings/python/x_shell/: __init__.py  client.py  types.py
docker/: Dockerfile  docker-compose.yml
examples/docker-container/: README.md  index.html  package-lock.json  package.json  server.js
examples/multiplexing/: README.md  index.html  package-lock.json  package.json  server.js
src/client/: index.ts  terminal-client.ts
src/server/: auth-providers.ts  circular-buffer.ts  index.ts  session-manager.ts  terminal-server.ts
src/shared/: types.ts
src/ui/: styles.ts  x-shell-terminal.ts
tests/: circular-buffer.test.ts  session-manager.test.ts
